* Fixed send of magnet links issue. It fixes #114